# tpa

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
agentws/: AGENTS.md  MONITORING.md  WORKFLOW.md  default.team
attention/: CMakeLists.txt  README.md  attention.place  attention.tpp  attention_common.h  attention_compute_costs.json  attention_et.h  attention_output.c  attention_output.tpm  attention_qkv_gen.c  attention_qkv_gen.tpm  attention_score.c  attention_score.tpm  attention_serial.place  attention_softmax.c  attention_softmax.tpm
cmake/: gen_tpa_image.cmake  run_erbium_expected_fail.cmake  run_erbium_test_fast.cmake  tpa-kernel.cmake
depth/: CMakeLists.txt  README.md  stereo_sad.c  stereo_sad.place  stereo_sad.tpm  stereo_sad.tpp  stereo_sad_common.h  stereo_sad_compute_costs.json
planner/: README.md  pyproject.toml  setup.py
planner/src/tpa_planner/: __init__.py  common.py  edge_plan.py  extract_process_metadata.py  map_program.py  plan_program.py
planner/tests/: test_machine_topologies.py  test_tensor_matmul_mapping.py
tests/: CMakeLists.txt
tests/depth/: CMakeLists.txt  README.md  argmin_16x8.place  argmin_16x8.tpp  cost_5x5.place  cost_5x5.tpp  depth_sad_block.c  depth_sad_block.tpm  stripe_96x16.place  stripe_96x16.tpp
tests/tpa_msg/: CMakeLists.txt  bench_100.c  bench_100.place  bench_100.tpm  bench_100.tpp  cross_recv_first.c  cross_recv_first.place  cross_recv_first.tpm  cross_recv_first.tpp  cross_recv_first_fabric.place  cross_send_first.c  cross_send_first.place  cross_send_first.tpm  cross_send_first.tpp  cross_send_first_fabric.place  edge_storage.c  edge_storage.tpm  edge_storage_config.h  edge_storage_recv_first.tpp  edge_storage_recv_first_direct.place  edge_storage_recv_first_fabric.place  edge_storage_recv_first_local.place  edge_storage_send_first.tpp  edge_storage_send_first_direct.place  edge_storage_send_first_fabric.place  edge_storage_send_first_local.place  race.c  race.tpm  race.tpp  race_fabric.place  same_recv_first.c  same_recv_first.place  same_recv_first.tpm  same_recv_first.tpp  same_send_first.c  same_send_first.place  same_send_first.tpm  same_send_first.tpp
tests/tpa_negative/: CMakeLists.txt  expected_fail.c  expected_fail.place  expected_fail.tpm  expected_fail.tpp
tests/tpa_queue/: CMakeLists.txt  basic.c  basic.place  basic.tpm  basic.tpp  many.c  many.place  many.tpm  many.tpp  wake.c  wake.place  wake.tpm  wake.tpp  yield.c  yield.place  yield.tpm  yield.tpp
tests/yolo/: CMakeLists.txt  bottleneck_l27_28.c  bottleneck_l27_28.place  bottleneck_l27_28.tpm  bottleneck_l27_28.tpp  c3_l40_44.c  c3_l40_44.tpm  c3_l40_44.tpp  cbs_l40.c  cbs_l40.place  cbs_l40.tpm  cbs_l40.tpp  detect_l57_58_69_63_64_72.c  detect_l57_58_69_63_64_72.place  detect_l57_58_69_63_64_72.tpm  detect_l57_58_69_63_64_72.tpp  neck_down_l45_50.c  neck_down_l45_50.place  neck_down_l45_50.tpm  neck_down_l45_50.tpp  neck_up_l34_39.c  neck_up_l34_39.tpm  neck_up_l34_39.tpp  sppf_l31_32.c  sppf_l31_32.place  sppf_l31_32.tpm  sppf_l31_32.tpp  yolo_subgraph_p4.c  yolo_subgraph_p4_p5_p6.place  yolo_subgraph_p4_p5_p6.tpm  yolo_subgraph_p4_p5_p6.tpp  yolo_subgraph_p4_p5_p6_src.c  yolo_subgraph_p5.c  yolo_subgraph_p6.c  yolov8n_c2f_block.c  yolov8n_c2f_block.place  yolov8n_c2f_block.tpm  yolov8n_c2f_block.tpp  yolov8n_detect_dfl.c  yolov8n_detect_dfl.place  (+2 more)
tpa/: CMakeLists.txt
tpa-device/: CMakeLists.txt
tpa-device/examples/: tpa_pipe_demo.c
tpa-device/runtime/: demo_runtime.c  tpa_scheduler.c
tpa-host/: CMakeLists.txt
tpa-host/src/: tpa_launcher.cpp
tpa/hal/erbium/: hal_erbium.c
tpa/hal/erbium/include/tpa/hal/: erbium.h
tpa/hal/etsoc1/: hal_etsoc1.c
tpa/hal/etsoc1/include/tpa/hal/: etsoc1.h
tpa/hal/include/tpa/: hal.h
tpa/hal/include/tpa/hal/: erbium.h  etsoc1.h
tpa/lib/include/tpa/: channel.h  image.h  process.h  runtime.h  scheduler.h  tpa.h
tpa/lib/src/: channel.c  process.c  scheduler.c  tpa_runtime.c
tpa/tests/: smoke.c
yolov5n/: CMakeLists.txt  annotate_yolo_demo.py  draw_ppm_boxes.py  yolo_demo.cpp  yolov5n_common.c  yolov5n_common.h  yolov5n_compute_costs.json  yolov5n_demo.h  yolov5n_demo.tpp  yolov5n_demo_sink.c  yolov5n_demo_sink.tpm  yolov5n_downstream.place  yolov5n_downstream.tpp  yolov5n_forks.c  yolov5n_forks.tpm  yolov5n_full.place  yolov5n_full.tpp  yolov5n_full_sources.c  yolov5n_full_sources.tpm  yolov5n_luts.c  yolov5n_luts.h  yolov5n_p0.c  yolov5n_p0.tpm  yolov5n_p1.c  yolov5n_p1.tpm  yolov5n_p10.c  yolov5n_p10.tpm  yolov5n_p2.c  yolov5n_p2.tpm  yolov5n_p3.c  yolov5n_p3.tpm  yolov5n_p4.c  yolov5n_p4.tpm  yolov5n_p5.c  yolov5n_p5.tpm  yolov5n_p6.c  yolov5n_p6.tpm  yolov5n_p7.c  yolov5n_p7.tpm  yolov5n_p8.c  (+7 more)
yolov8n/: CMakeLists.txt  yolov8n_c2f_detect_downstream.c  yolov8n_c2f_detect_downstream.place  yolov8n_c2f_detect_downstream.tpm  yolov8n_c2f_detect_downstream.tpp  yolov8n_c2f_detect_downstream_compute_costs.json  yolov8n_c2f_detect_downstream_weights.c  yolov8n_dense_c2f_detect_downstream.c  yolov8n_dense_c2f_detect_downstream.place  yolov8n_dense_c2f_detect_downstream.tpm  yolov8n_dense_c2f_detect_downstream.tpp  yolov8n_dense_c2f_detect_downstream_compute_costs.json  yolov8n_detect_downstream.c  yolov8n_detect_downstream.h  yolov8n_detect_downstream.place  yolov8n_detect_downstream.tpm  yolov8n_detect_downstream.tpp  yolov8n_detect_downstream_compute_costs.json  yolov8n_external_detect_c2f_weights_extern.h  yolov8n_p3_c2f_detect.c  yolov8n_p3_c2f_detect.place  yolov8n_p3_c2f_detect.tpm  yolov8n_p3_c2f_detect.tpp  yolov8n_p3_c2f_detect_compute_costs.json  yolov8n_p3_dense_c2f_detect.c  yolov8n_p3_dense_c2f_detect.place  yolov8n_p3_dense_c2f_detect.tpm  yolov8n_p3_dense_c2f_detect.tpp  yolov8n_p3_dense_c2f_detect_compute_costs.json  yolov8n_p4_c2f_detect.c  yolov8n_p4_c2f_detect.place  yolov8n_p4_c2f_detect.tpm  yolov8n_p4_c2f_detect.tpp  yolov8n_p4_c2f_detect_compute_costs.json  yolov8n_p4_dense_c2f_detect.c  yolov8n_p4_dense_c2f_detect.place  yolov8n_p4_dense_c2f_detect.tpm  yolov8n_p4_dense_c2f_detect.tpp  yolov8n_p4_dense_c2f_detect_compute_costs.json  yolov8n_p4_p5_neck_tail.c  (+26 more)
(+123 files in other folders)
